--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "IRE_Client/Shared"]
 	path = IRE_Client/Shared
 	url = https://Kernell@bitbucket.org/mtaroleplay/ire-shared-libs.git
+[submodule "IRE_Nametags/Shared"]
+	path = IRE_Nametags/Shared
+	url = https://Kernell@bitbucket.org/mtaroleplay/ire-shared-libs.git
